<resources>
    <string name="app_name">Hey_Taksi</string>
    <string name="RegisterBanner"> Hoşgeldiniz :)) </string>
    <string name="RegisterUsername">Kullanıcı Adı</string>
    <string name="RegisterEmail">e-mail</string>
    <string name="RegisterParola">Parola</string>
    <string name="RegisterParolaTekrar">Parola Tekrar</string>
    <string name="RegisterButton">Kayıt Ol</string>
    <string name="Cancel">İptal</string>
    <string name="fail">hata</string>
    <string name="Haydi_Durma"> Hey Taksi</string>
    <string name="facebook_app_id">213721902429856</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_taksikonumlari">taksi konumlari</string>

    <string-array name="sehirler">
        {
        <item>ADANA</item>
        <item>ADIYAMAN</item>
        <item>AFYON</item>
        <item>AGRI</item>
        <item>AKSARAY</item>
        <item>AMASYA</item>
        <item>ANKARA</item>
        <item>ANTALYA</item>
        <item>ARDAHAN</item>
        <item>ARTVIN</item>
        <item>AYDIN</item>
        <item>BALIKESIR</item>
        <item>BARTIN</item>
        <item>BATMAN</item>
        <item>BAYBURT</item>
        <item>BILECIK</item>
        <item>BINGOL</item>
        <item>BITLIS</item>
        <item>BOLU</item>
        <item>BURDUR</item>
        <item>BURSA</item>
        <item>CANAKKALE</item>
        <item>CANKIRI</item>
        <item>CORUM</item>
        <item>DENIZLI</item>
        <item>DIYARBAKIR</item>
        <item>DUZCE</item>
        <item>EDIRNE</item>
        <item>ELAZIG</item>
        <item>ERZINCAN</item>
        <item>ERZURUM</item>
        <item>ESKISEHIR</item>
        <item>GAZIANTEP</item>
        <item>GIRESUN</item>
        <item>GUMUSHANE</item>
        <item>HAKKARI</item>
        <item>HATAY</item>
        <item>IGDIR</item>
        <item>ISPARTA</item>
        <item>ISTANBUL</item>
        <item>IZMIR</item>
        <item>KAHRAMANMARAS</item>
        <item>KARAMAN</item>
        <item>KARS</item>
        <item>KASTAMONU</item>
        <item>KAYSERI</item>
        <item>KIRIKKALE</item>
        <item>KIRKLARELI</item>
        <item>KIRSEHIR</item>
        <item>KILIS</item>
        <item>KOCAELI</item>
        <item>KONYA</item>
        <item>KUTAHYA</item>
        <item>MALATYA</item>
        <item>MANISA</item>
        <item>MARDIN</item>
        <item>MERSIN</item>
        <item>MUGLA</item>
        <item>MUS</item>
        <item>NEVSEHIR</item>
        <item>NIGDE</item>
        <item>ORDU</item>
        <item>OSMANIYE</item>
        <item>RIZE</item>
        <item>SAKARYA</item>
        <item>SAMSUN</item>
        <item>SIIRT</item>
        <item>SINOP</item>
        <item>SIVAS</item>
        <item>SANLIURFA</item>
        <item>SIRNAK</item>
        <item>TEKIRDAG</item>
        <item>TOKAT</item>
        <item>TRABZON</item>
        <item>TUNCELI</item>
        <item>USAK</item>
        <item>VAN</item>
        <item>YALOVA</item>
        <item>YOZGAT</item>
        <item>ZONGULDAK</item>

    </string-array>

    <string name="title_activity_mesafe_ucret_hesapla">Map</string>
    <string name="sign_out">Çıkış Yap</string>
    <string name="title_activity_durak_ekleme">durakEkleme</string>
    <string name="action_settings">Settings</string>
    <string name="GPSAlertDialogTitle">Lokasyon Ayarları</string>
    <string name="GPSAlertDialogMessage">Konum bilgisini açmak için tıklayınız</string>


</resources>
